<resources>
    <string name="app_name">FindEvents</string>
    <string name="findvents">FINDVENTS</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="ingresa_tu_nombre_de_usuario">Ingresa tu nombre de usuario</string>
    <string name="no_tienes_una_cuenta_registrate_aqu">No tienes una cuenta? Registrate aquí</string>
    <string name="ingresar">INGRESAR</string>
    <string name="sign_up">SIGN UP</string>
    <string name="correoelectronico_dominio_com">correoelectronico@dominio.com</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="ok">Ok</string>
    <string name="se_ha_registrado_correctamente">Se ha registrado correctamente</string>
    <string name="okGoLogin">OK</string>
    <string name="eventos_frikis_m_s">Eventos Frikis más</string>
    <string name="cerca_de_ti">cerca de ti</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string-array name="user_type">
        <item>Tipo de usuario</item>
        <item>Friki</item>
        <item>Organizador</item>

    </string-array>
</resources>